# backend-assessment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1bbc673fc84a_initial_migration.py
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/events/: service.py  views.py
app/api/routes/health/: service.py  views.py
app/integration/: provider_field_mappings.py  providers.py
app/settings/: db.py  settings.py
app/utils/: utils.py
providers/: __init__.py  provider_a.py  provider_b.py
tests/: conftest.py  test_endpoints.py  test_events_service.py  test_example.py  test_providers.py  test_service_additional.py  test_utils.py
